--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <ul>
         <li><a href="Assignment1/index.html" target="_blank">Assignment1</a></li>
+        <li><a href="Assignment2/index.html" target="_blank">Assignment2</a></li>
     </ul>
 
    
