rename assig 4 ka link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="Assignment1/index.html" target="_blank">Assignment1</a></li>
         <li><a href="Assignment2/index.html" target="_blank">Assignment2</a></li>
         <li><a href="Assignment3/samantictage.html" target="_blank">Assignment3</a></li>
-        <li><a href="Assignment4/page.html" target="_blank">Assignment4</a></li>
+        <li><a href="Assignment4/pages.html" target="_blank">Assignment4</a></li>
     </ul>
 
    
