periodic table chart & index ma assignment created

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="Assignment2/index.html" target="_blank">Assignment2</a></li>
         <li><a href="Assignment3/samantictage.html" target="_blank">Assignment3</a></li>
         <li><a href="Assignment4/pages.html" target="_blank">Assignment4</a></li>
+        <li><a href="Assignment5/table.html" target="_blank">Assignment5</a></li>
     </ul>
 
    
