herf link new update working

--- a/Assignment4/pages.html
+++ b/Assignment4/pages.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAGES</title>
+    <title>PAGES & HERF</title>
+    <Style>
+        .section ul {
+            display: flex;
+            gap: 30px;
+        }
+    </Style>
 </head>
+
 <body>
-    
+
+    <h2>PAGES</h2>
     <ul>
         <li>Briyani
             <ul>
@@ -15,13 +24,89 @@
             <ul>
                 <li><a href="Briyani/Chickenbiryani.html" target="_blank">Chicken Biryani</a></li>
             </ul>
-             <ul>
+            <ul>
                 <li><a href="Briyani/Beefbiryani.html" target="_blank">Beef Biryani</a></li>
             </ul>
         </li>
     </ul>
 
 
+    <h2>No Scroll Herf link On Click</h2>
+
+    <div class="section">
+
+
+        <UL>
+            <li><a href="#one">ONE</a></li>
+            <li><a href="#two">TWO</a></li>
+            <li><a href="#three">THREE</a></li>
+            <li><a href="#four">FOUR</a></li>
+            <li><a href="#five">FIVE</a></li>
+            <li><a href="#six">SIX</a></li>
+        </UL>
+    </div>
+    <p>
+    <h1 id="one"> ONE</h1>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, inventore! Deleniti et dicta praesentium
+    consequatur! Incidunt sapiente doloremque qui dolorem facere similique voluptates hic. Voluptates dignissimos
+    excepturi labore eligendi consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae
+    animi iusto, iure repellat aliquam. Soluta dolorum esse illum necessitatibus aperiam debitis assumenda id odio,
+    modi natus, quis numquam. Fuga!.
+    </p>
+
+    <p>
+    <h1 id="two">TWO</h1>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, inventore! Deleniti et dicta praesentium
+    consequatur! Incidunt sapiente doloremque qui dolorem facere similique voluptates hic. Voluptates dignissimos
+    excepturi labore eligendi consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae
+    animi iusto, iure repellat aliquam. Soluta dolorum esse illum necessitatibus aperiam debitis assumenda id odio,
+    modi natus, quis numquam. Fuga!.
+    </p>
+
+    <p>
+    <h1 id="three">THREE</h1>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, inventore! Deleniti et dicta praesentium
+    consequatur! Incidunt sapiente doloremque qui dolorem facere similique voluptates hic. Voluptates dignissimos
+    excepturi labore eligendi consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae
+    animi iusto, iure repellat aliquam. Soluta dolorum esse illum necessitatibus aperiam debitis assumenda id odio,
+    modi natus, quis numquam. Fuga!.
+    </p>
+    <p>
+    <h1 id="four">FOUR</h1>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, inventore! Deleniti et dicta praesentium
+    consequatur! Incidunt sapiente doloremque qui dolorem facere similique voluptates hic. Voluptates dignissimos
+    excepturi labore eligendi consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae
+    animi iusto, iure repellat aliquam. Soluta dolorum esse illum necessitatibus aperiam debitis assumenda id odio,
+    modi natus, quis numquam. Fuga!.
+    </p>
+    <p>
+    <h1 id="five">FIVE</h1>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, inventore! Deleniti et dicta praesentium
+    consequatur! Incidunt sapiente doloremque qui dolorem facere similique voluptates hic. Voluptates dignissimos
+    excepturi labore eligendi consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae
+    animi iusto, iure repellat aliquam. Soluta dolorum esse illum necessitatibus aperiam debitis assumenda id odio,
+    modi natus, quis numquam. Fuga!.
+    </p>
+
+    <p>
+    <h1 id="six">SIX</h1>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, inventore! Deleniti et dicta praesentium
+    consequatur! Incidunt sapiente doloremque qui dolorem facere similique voluptates hic. Voluptates dignissimos
+    excepturi labore eligendi consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae
+    animi iusto, iure repellat aliquam. Soluta dolorum esse illum necessitatibus aperiam debitis assumenda id odio,
+    modi natus, quis numquam. Fuga!.
+    </p>
+
+    <ul>
+        <li><a href="mailto:mr.nihalaikamran@gmail.com" target="_blank">Email Me</a></li>
+        <li><a href="mailto:03131526683" target="_blank">Contact Me</a></li>
+    </ul>
+
+    <ul>
+        <li><a href="#top">Top</a></li>
+    </ul>
+
 
 </body>
+
 </html>
