--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="Assignment3/samantictage.html" target="_blank">Assignment3</a></li>
         <li><a href="Assignment4/pages.html" target="_blank">Assignment4</a></li>
         <li><a href="Assignment5/table.html" target="_blank">Assignment5</a></li>
+        <li><a href="Assignment6/indexform.html" target="_blank">Assignment6</a></li>
     </ul>
 
    
