--- a/Assignment4/Briyani/Beefbiryani.html
+++ b/Assignment4/Briyani/Beefbiryani.html
@@ -12,7 +12,7 @@
     <h1>Beef Biryani</h1>
 
     <p>
-        NEHAL RESTQURANT. 2 Baat Bhai Beef Biryani
+        NEHAL RESTQURANT. Bhai Beef Biryani
     </p>
 
     <a href="../pages.html">GO BACK</a>
