--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="Assignment4/pages.html" target="_blank">Assignment4</a></li>
         <li><a href="Assignment5/table.html" target="_blank">Assignment5</a></li>
         <li><a href="Assignment6/indexform.html" target="_blank">Assignment6</a></li>
+        <li><a href="Assignment7/index.html" target="_blank">New-Assignment7</a></li>
     </ul>
 
    
